# target-mcp

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  server.json
.claude/skills/target-checklist-fanout/: SKILL.md
docs/: DECISIONS.md  INGESTION-AND-SCORING-DESIGN.md  METHODS.md  STATUS.md  md_to_docx.py  pilot-2026-07-08.md
target_mcp/: assess.py  corpus.py  corpus_run.py  governance.py  ingest.py  render.py  render_docx.py  render_html.py  retrieve.py  server.py  spec.py  validate.py
target_mcp/specs/: target-0.1.0.yaml
tests/: test_core.py  test_corpus_run.py  test_server.py
